# LockNote

./: Cargo.toml  README.md  locknote.json
src/: cli.rs  crypto.rs  lib.rs  main.rs  storage.rs  types.rs
tests/: cli_tests.rs  crypto_tests.rs  storage_tests.rs
